--- a/css/css.css
+++ b/css/css.css
@@ -333,10 +333,15 @@ hr.meetingroom-hr {
   display: none!important;
   position: fixed;
   bottom: 50px;
-  right: 100px;
+  right: 50px;
   z-index: 99;
-  background-color: #fff;
-  padding: 1rem;
+  background-color:transparent;
+  padding: 0rem;
+  width: 120px;
+  height: 120px;
+}
+.btn-backtotop img{
+  max-width: 100%;
 }
 .link-all-div{
   position: absolute;
@@ -472,11 +477,12 @@ hr.meetingroom-hr {
     border-bottom: 2px solid #44a270;
   }
   .btn-backtotop{    
-    bottom: 25px;
-    right: 25px;
-    z-index: 99;
-    background-color: #fff;
-    padding: 1rem;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;    
+    padding: 0rem;
+    width: 90px;
+    height: 90px;
   }
 }
 
@@ -571,10 +577,11 @@ hr.meetingroom-hr {
     padding: 0;
   }
   .btn-backtotop{    
-    bottom: 0px;
-    right: 0px;
-    z-index: 99;
-    background-color: #fff;
-    padding: 1rem;
+    bottom: 10px;
+    right: 10px;
+    z-index: 99;    
+    padding: 0rem;
+    width: 80px;
+    height: 80px;
   }
 }
